# ptx_oven_controller_thaidn

./: CMakeLists.txt  TESTING.md  api.cpp  api.h  diagram.json  notes.md  ptx_actuator.cpp  ptx_actuator.h  ptx_elf_cookie_oven.ino  ptx_logging.cpp  ptx_logging.h  ptx_oven_config.cpp  ptx_oven_config.h  ptx_oven_control.cpp  ptx_oven_control.h  ptx_sensor_filter.cpp  ptx_sensor_filter.h  requirements.md  wokwi-project.txt
.github/workflows/: ci-gtest.yml
tests/: test_oven_control.cpp  test_oven_control_gtest.cpp
tests/mocks/: mock_api.cpp  mock_api.h  mock_logging.cpp
tests/stubs/: Arduino.h
